# mathematics-of-poker

./: .gitignore  LICENSE  README.md  analyze_payoffs.py  clairvoyance_fixed.py  debug_solver.py  pyproject.toml  requirements-dev.txt  requirements.txt
assets/infographics/: README.md
examples/: clairvoyance_example.py  cops_and_robbers.py  jam_or_fold_game_1.py  jam_or_fold_game_2.py  odds_and_evens.py  roshambo.py  roshambo_f.py  roshambo_s.py  zero_one_game_1.py  zero_one_game_2.py
mathematics_of_poker/: __init__.py  phevaluator.py
mathematics_of_poker/ch11/: README.md
mathematics_of_poker/games/: __init__.py  clairvoyance.py  game_tree.py  half_street.py  mccfr.py  toy_poker_ODF_CFR.py
mathematics_of_poker/games/ch10/: __init__.py  ch10_facing_the_nemesis.md  cops_and_robbers.py  odds_and_evens.py  roshambo.py  roshambo_f.py  roshambo_s.py
mathematics_of_poker/games/ch11/: README.md  __init__.py  ch11_half_street_games.md  (+5 more)
mathematics_of_poker/models/: __init__.py
mathematics_of_poker/phevaluator/: __init__.py
mathematics_of_poker/utils/: __init__.py  plotting.py
notebooks/: clairvoyance_cfr_plus.ipynb
part_iii_optimal_play/: README.md  ch10_game_theory.md  ch10_game_theory.py  ch11_half_street_games.md  ch11_half_street_games.py  ch12_jam_or_fold.md  ch12_jam_or_fold.py  ch13_akq_game.md  ch13_akq_game.py  ch14_no_limit_bet_sizing.md  ch14_no_limit_bet_sizing.py  ch15_full_street_games.md  ch15_full_street_games.py  ch16_no_fold_games.md  ch16_no_fold_games.py
phevaluator/: evaluator.py  evaluator_omaha.py
phevaluator/tables/: __init__.py
tests/: __init__.py  test_clairvoyance.py  test_half_street_solver.py  test_package.py
tests/ch10/: test_cops_and_robbers.py  test_odds_and_evens.py  test_roshambo.py  test_roshambo_f.py  test_roshambo_s.py
tests/ch11/: test_clairvoyance.py  test_game_tree.py  test_half_street_solver.py  test_zero_one_game_1.py  test_zero_one_game_2.py
tests/ch12/: test_jam_or_fold_game_1.py  test_jam_or_fold_game_2.py
tests/pheval/: test_pheval.py
(+8 files in other folders)
